[metadata]
name = exoMAST
version = 1.0
author = Kevin B. Stevenson
author_email = kbstevenson@gmail.com
description = Routines for Exo.MAST
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/kevin218/exoMAST
project_urls =
    Bug Tracker = https://github.com/kevin218/exoMAST/issues
    Source Code = https://github.com/kevin218/exoMAST
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0
	numpy

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
